fix dropdown z-index issue

--- a/packages/app/components/Connect/index.module.css
+++ b/packages/app/components/Connect/index.module.css
@@ -37,6 +37,7 @@
   right: 0;
   top: calc(100% + 0.5rem);
   width: 280px;
+  z-index: 99;
 }
 
 .row {
